@@ -5,12 +5,14 @@
  * user change password form data. It is used by the 'changepassword' action of 'UserController'.
  */
 class UserChangePassword extends CFormModel {
+	public $oldPassword;
 	public $password;
 	public $verifyPassword;
 	
 	public function rules() {
 		return array(
 			array('password, verifyPassword', 'required'),
+			array('oldPassword', 'required', 'on'=>array('normalChange')),
 			array('password', 'length', 'max'=>128, 'min' => 4,'message' => Yii::t("UserModule.user", "Incorrect password (minimal length 4 symbols).")),
 			array('password', 'compare', 'compareAttribute'=>'verifyPassword', 'message' => Yii::t("UserModule.user", "Retype Password is incorrect.")),
 		);
@@ -22,6 +24,7 @@ class UserChangePassword extends CFormModel {
 	public function attributeLabels()
 	{
 		return array(
+			'oldPassword'=>Yii::t("UserModule.user", "Old password"),
 			'password'=>Yii::t("UserModule.user", "password"),
 			'verifyPassword'=>Yii::t("UserModule.user", "Retype Password"),
 		);
